convert IconLinkAsSvg to LinkAsSvg and conditionally render to handle either internal links with NavLink or external links with anchor tags wrapped in divs and containing svgs within link.  Fix spacing on Header at all screen sizes to handle new div wraps around all svg links/icons

--- a/src/components/Header/header.sass
+++ b/src/components/Header/header.sass
@@ -25,6 +25,9 @@ header .header-black-background
     justify-content: space-between
     padding: 32.5px 0
      
+.shopping-cart-icon
+    display: flex
+    justify-content: flex-end
 
 .mobile-header.row.main-container
     
@@ -49,13 +52,17 @@ header .header-black-background
 
     +all-tablets
         display: none
+    
+    & .logo-icon, .shopping-cart-icon
+        +all-large-screen
+            width: 20%
 
 
 .tablet-header
-    & .icon-group
+    & .icon-group.row
         align-items: center
         justify-content: space-between
-        width: 201px
+        width: 285px
 
 
 .navigation-bar
